# PangoPay-challenge

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py
app/api/: routes.py  uploads.py
app/ingestion/: __init__.py  normalizers.py
app/matching/: __init__.py  engine.py
app/models/: __init__.py  schemas.py
app/reconciliation/: __init__.py  service.py
app/services/: __init__.py  reconcile.py
data/: demo-payload.json  ledger.json
data/settlements/: mpesa_tanzania.json  ovo_indonesia.json  scb_thailand.json
scripts/: generate_test_data.py
tests/: test_api.py  test_matching.py  test_split_settlement.py
